--- a/vignettes/contrasts.Rmd
+++ b/vignettes/contrasts.Rmd
@@ -2,7 +2,10 @@
 title: "Contrasts"
 author: "Bradley R. Buchsbaum"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output:
+  prettydoc::html_pretty:
+    theme: Leonids
+    highlight: github
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
