--- a/vignettes/baseline_model.Rmd
+++ b/vignettes/baseline_model.Rmd
@@ -4,7 +4,7 @@ author: "Bradley R. Buchsbaum"
 date: "`r Sys.Date()`"
 output:
   prettydoc::html_pretty:
-    theme: Leonids
+    theme: Architect
     highlight: github
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
