--- a/vignettes/hemodynamic_response.Rmd
+++ b/vignettes/hemodynamic_response.Rmd
@@ -16,9 +16,9 @@ vignette: >
 
 ## Hemodynamic response function
 
-A hemodynamic response function (HRF) is used to model the temporal evoluation of an fMRI response to an experimental "event". An HRF is a function of *time* and peaks 4-6s afer the event onset.
+A hemodynamic response function (HRF) is used to model the temporal evoluation of an fMRI response to an experimental "event". An HRF is a function of *time* and usually peaks 4-6s afer the event onset.
 
-There are a number of pre-defined HRFs in `fmrireg` that make it easy to work with them. For example, we can use the SPM "canonical" HRF as follows:
+There are a number of pre-defined HRFs in `fmrireg` that make it easy to work with them. For example, we can use the SPM "canonical" HRF. We use the function `hrf_blocked` which can generate flexible hemodynamic responses. 
 
 ```{r, echo=FALSE,results='hide', message=FALSE, warning=FALSE}
 devtools::load_all()
@@ -29,17 +29,21 @@ devtools::load_all()
 library(magrittr)
 
 ## SPM canonical hrf
-f1 <- hrf_blocked(hrf_spmg1, width=1)
+f1 <- hrf_blocked(hrf_spmg1, width=0)
 
 ## Gaussian hrf with default parameters (mean=6, sd=1.5)
-f2 <- hrf_blocked(hrf_gaussian, width=1) 
+f2 <- hrf_blocked(hrf_gaussian, width=0) 
 
-plot(seq(0,20,by=.1), f1(seq(0,20,by=.1)), type="l", xlab="Time", ylab="BOLD response", main="Gaussian and SPM Canonical HRF", ylim=c(-.2, 2.2))
+plot(seq(0,20,by=.1), f1(seq(0,20,by=.1)), type="l", xlab="Time", ylab="BOLD response", main="Gaussian and SPM Canonical HRF", ylim=c(-.1, .3))
 lines(seq(0,20,by=.1), f2(seq(0,20,by=.1)), type="l", col=2)
 
 ```
 
+In the above, the "width" parameters tells the `hrf_block` function that the event is "instantaneous", i.e. that it is not extended in time. This is the standard way of modeling short-lasting (e.g. < 2 seconds) in fMRI.
+
 ## Changing Default Parameters
+
+Standard HRF functions have default parameters that determine the shape of the response. For the Gaussian HRF, these parameters are easy to understand. The `mean` specifies the "peak" of the HRF and the `sd` parameter specifies its "width". 
 
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
 
@@ -48,12 +52,14 @@ hrf_7_3 <- gen_hrf(hrf_gaussian, mean=7, sd=3)
 hrf_5_2 <- gen_hrf(hrf_gaussian, mean=5, sd=2)
 hrf_4_1 <- gen_hrf(hrf_gaussian, mean=4, sd=1)
 
-vals1 <- hrf_7_3(seq(0,20,by=.1))
-vals2 <- hrf_5_2(seq(0,20,by=.1))
-vals3 <- hrf_4_1(seq(0,20,by=.1))
+time <- seq(0,20,by=.1)
+
+vals1 <- hrf_7_3(time)
+vals2 <- hrf_5_2(time)
+vals3 <- hrf_4_1(time)
 
 ## notice that that each function is scaled so that it's highest value = 1.
-plot(seq(0,20,by=.1), vals1, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals1, vals2, vals3)), main="Three Gaussian HRFs")
+plot(seq(0,20,by=.1), vals1, type="l", xlab="Time", ylab="BOLD response", ylim=range(c(vals1, vals2, vals3)), main="Three Gaussian HRFs with different parameters")
 lines(seq(0,20,by=.1), vals2, type="l", col=2)
 lines(seq(0,20,by=.1), vals3, type="l", col=3)
 
@@ -77,7 +83,23 @@ lines(time, hrf_w3(time), type="l", col=3)
 
 ```
 
-By default an increase in the duration results in the summation of a series of shifted responses, which is consistent with the notion that the hemodyamic response "adds up" or accumulates over time. But we can disable this adding behavior by setting `summate=FALSE`. This is useful if one only wants to change the width of an HRF without changing its amplitude.
+We can also require that the HRFs be normalized so that, regardless of the block duration, the peak amplitude of the HRF = 1.
+
+```{r, message=FALSE,fig.width = 7, fig.height = 5}
+
+hrf_w1 <- hrf_blocked(hrf_spmg1, width=1, normalize=TRUE)
+hrf_w2 <- hrf_blocked(hrf_spmg1, width=2, normalize=TRUE)
+hrf_w3 <- hrf_blocked(hrf_spmg1, width=3, normalize=TRUE)
+
+plot(time, hrf_w1(time), type="l", xlab="Time", ylab="BOLD response", ylim=range(-.2, 1.2), main="HRFs with Different Durations, but normalized")
+lines(time, hrf_w2(time), type="l", col=2)
+lines(time, hrf_w3(time), type="l", col=3)
+
+```
+
+
+By default an increase in the duration results in the summation of a series of shifted responses, which is consistent with the notion that the hemodyamic response "adds up" or accumulates over time. But we can disable this additive behavior by setting `summate=FALSE`. This is useful if one assumes the HRF "saturates" (i..e does not increase in amplitude) with extended stimulation.
+
 
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
 
@@ -173,7 +195,7 @@ Rather than using a b-spline basis set, we could construct our own set of functi
 ```{r, message=FALSE,fig.width = 7, fig.height = 5}
 
 hrf_set <- do.call(gen_hrf_set,
-                   lapply(seq(0,20,by=2), function(i) {  hrf_gaussian %>% hrf_lagged(i) %>% HRF(name=paste0("lag_", i)) }))
+                   lapply(seq(0,20,by=2), function(i) {  hrf_gaussian %>% hrf_lagged(i) }))
 
 matplot(hrf_set(0:36), type='l', xlab="Time", ylab="BOLD Activity")
 
