--- a/vignettes/a_05_contrasts.Rmd
+++ b/vignettes/a_05_contrasts.Rmd
@@ -4,7 +4,7 @@ author: "Bradley R. Buchsbaum"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Contrasts}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
