--- a/vignettes/a_06_afni.Rmd
+++ b/vignettes/a_06_afni.Rmd
@@ -4,7 +4,7 @@ author: "Bradley R. Buchsbaum"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Translating to AFNI 3dDeconvolve}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
