--- a/vignettes/a_07_trialwise.Rmd
+++ b/vignettes/a_07_trialwise.Rmd
@@ -20,7 +20,8 @@ First we load in an experimental design.
 
 library(dplyr)
 library(fmrireg)
-facedes <- read.table(system.file("extdata", "face_design.txt", package = "fmrireg"), header=TRUE)
+facedes <- read.table(system.file("extdata", "face_design.txt", package = "fmrireg"), header=TRUE) %>%
+  filter(run == 1)
 ## we had a constant value to the design used later to model the mean stimulus response over all trials.
 facedes$constant <- factor(rep(1, nrow(facedes)))
 
@@ -54,7 +55,9 @@ dset <- fmri_mem_dataset(scans=scans,
 
 Now we're ready to run the beta estimation analysis. There are two components to the model: a fixed effects formula and a random effects formula. The fixed effects part models the condition-specific responses, and the random effects part models the trial-specific responses. For the random effect part, we want to model every onset separately, so we use the `trialwise` hrf modeling function. For the fixed part, we use a standard `hrf` modeling function.
 
-The method we use is "pls" for **partial least squares**, which effectively acts as a regularized least squares estimation procedure.
+The method we use is "pls" for **partial least squares** (via the `pls` package), which effectively acts as a regularized least squares estimation procedure. Simulations show that `pls` produces trialwise beta estimates for closely space onsets (e.g. overlapping hrfs) that are similar to the "least squares sum" approach (citation needed). By modeling the mean effect with `fixed = onset ~ hrf(constant)` the "random effects" `onset ~ trialwise()` capture the deviations from that mean, with regularization achieved by using partial least squares estimation with a small number of components (here, n=3). Other fixed effects can also be modeled, and could include events of no interest that should be covaried out when estimating the beta coefficients of interest.
+
+When the onsets are *not* closely space together, ordinary least squares using the "ols" method is appropriate. For method "ols", however, a constant fixed effect should not be used, since it is a linear combination of the random effects, so we omit the "fixed" term.
 
 ```{r, message=FALSE, warning=FALSE}
   
@@ -63,5 +66,31 @@ res <- estimate_betas(dset, fixed = onset ~ hrf(constant), ran = onset ~ trialwi
                        method="pls", ncomp=3)
 
 names(res)
+
+res_ols <- estimate_betas(dset, ran = onset ~ trialwise(), block = ~ run, 
+                       method="ols", ncomp=3)
+
   
 ```
+
+We can plot the fixed effects model, which here is a single regressor. 
+
+```{r, message=FALSE, warning=FALSE, fig.width=8, fig.height=5}
+
+plot(res$fixed_model)
+
+```
+
+We can also plot the random effects model, where there is one regressor per trial.
+
+
+```{r, message=FALSE, warning=FALSE, fig.width=8, fig.height=5}
+
+plot(res$ran_model)
+
+```
+
+
+
+
+
